# sup-toolbox

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.sh
docs/: controlnet_tile.md  manual_install.md  sup_toolbox_usage.md
scripts/: ControlnetTile_pipeline_diffusers.py  ControlnetTile_pipeline_toolbox.py  FaithDiff_pipeline_diffusers.py  FaithDiff_restorer_pipeline_toolbox.py  FaithDiff_upscaler_pipeline_toolbox.py  SUPIR_pipeline_diffusers.py  SUPIR_restorer_pipeline_toolbox.py  SUPIR_upscaler_pipeline_toolbox.py
src/sup_toolbox/: CHANGELOG.md  cli.py  config.py  enums.py  pipeline_util.py  sup_toolbox_pipeline.py
src/sup_toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sup_toolbox/configs/: model_config.json
src/sup_toolbox/modules/: model_manager.py
src/sup_toolbox/modules/FaithDiff/: LICENSE_FAITHDIFF.md  pipeline_faithdiff_stable_diffusion_xl.py
src/sup_toolbox/modules/FaithDiff/models/: faithdiff_unet.py
src/sup_toolbox/modules/IPAdapter/: ip_load.py  resampler.py
src/sup_toolbox/modules/MoDControlTile/: LICENSE_MIXTURE_OF_DIFFUSERS.md  mod_controlnet_tile_sr_sdxl.py
src/sup_toolbox/modules/SUPIR/: LICENSE_SUPIR.md  pipeline_supir_stable_diffusion_xl.py
src/sup_toolbox/modules/SUPIR/models/: autoencoderKL_SUPIR.py  controlnet_SUPIR.py  unet_2d_condition_SUPIR.py
src/sup_toolbox/modules/SUPIR/schedulers/: scheduling_dpm_solver_restore.py  scheduling_euler_discrete_restore.py  scheduling_unipc_restore.py
src/sup_toolbox/modules/diffusers_local/: pag_utils.py  single_file_model.py
src/sup_toolbox/modules/diffusers_local/models/: autoencoder_kl_cpu.py
src/sup_toolbox/modules/diffusers_local/schedulers/: scheduling_dpmsolver_multistep.py  scheduling_euler_discrete.py  scheduling_unipc_multistep.py
src/sup_toolbox/presets/: Default.json  RES_FaithDiff.json  RES_FaithDiff_UPS_FaithDiff.json  RES_FaithDiff_UPS_SUPIR.json  RES_SUPIR.json  RES_SUPIR_UPS_FaithDiff.json  RES_SUPIR_UPS_SUPIR.json  UPS_ControlnetTile.json
src/sup_toolbox/tools/groundingdino_sam2/: groundingdino_sam2.py
src/sup_toolbox/tools/model_toolkit/: model_toolkit.py  toolkit.py
src/sup_toolbox/utils/: colorfix.py  image.py  logging.py  system.py
