[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sup-toolbox"
version = "0.1.0"
authors = [
  { name="Eliseu Silva (DEVAIEXP)", email="contact@devaiexp.com" },
]
description = "Scaling UP Toolbox. A powerful toolbox for image restoration and upscaling. Integrates state-of-the-art diffusion models such as SUPIR and others such as FaithDiff, and ControlNetTile for superior image enhancement and high-resolution synthesis."
readme = "README.md"
requires-python = ">=3.10"

license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [    
    "torch>=2.8.0",
    "torchvision>=0.23.0", 
    "torchaudio>=2.8.0",
    "diffusers==0.36.0",
    "transformers>=4.56.0",
    "accelerate>=1.10.1",
    "coloredlogs==15.0.1",
    "opencv-python",
    "scipy",
    "einops",    
    "bitsandbytes>=0.48.1",
    "numpy>=2.2.6",
    "fastapi>=0.115.2",
    "peft",    
    "torchsde",
    "triton-windows<3.5 ; sys_platform == 'win32'",
    "triton==3.4.0; sys_platform != 'win32'",
    "python-dotenv",
    "xformers==0.0.32.post2",
    "hf_xet",
    "onnxruntime",
    "onnxruntime-gpu",
    "optimum-quanto==0.2.7",    
    "sam-2 @ https://huggingface.co/DEVAIEXP/wheels/resolve/main/sam_2-1.1-py3-none-any.whl ; sys_platform == 'win32'",
    "sam-2 @ https://huggingface.co/DEVAIEXP/wheels/resolve/main/SAM_2-1.1-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux'",
    "groundingdino @ https://huggingface.co/DEVAIEXP/wheels/resolve/main/groundingdino-0.1.1-cp310-cp310-win_amd64.whl ; sys_platform == 'win32'",
    "groundingdino @ https://huggingface.co/DEVAIEXP/wheels/resolve/main/groundingdino-0.1.1-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux'",
    "flash_attn @ https://huggingface.co/DEVAIEXP/wheels/resolve/main/flash_attn-2.8.2-cp310-cp310-win_amd64.whl ; sys_platform == 'win32'",
    "flash_attn @ https://huggingface.co/DEVAIEXP/wheels/resolve/main/flash_attn-2.8.2-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [    
    "ruff>=0.14.3",
    "build",
    "twine",
]

[project.scripts]
sup-toolbox = "sup_toolbox.cli:main"

[project.urls]
"Homepage" = "https://github.com/DEVAIEXP/sup-toolbox"
"Bug Tracker" = "https://github.com/DEVAIEXP/sup-toolbox/issues"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*__pycache__*"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["sup_toolbox"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"